--- a/resteasy/resteasy-bootstrap/pom.xml
+++ b/resteasy/resteasy-bootstrap/pom.xml
@@ -15,6 +15,11 @@
 
     <dependencies>
         <dependency>
+<groupId>org.postgresql</groupId>
+<artifactId>postgresql</artifactId>
+            <version>42.1.1.jre7</version>
+        </dependency>
+        <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
             <version>1.1.0.Final</version>
@@ -24,6 +29,13 @@
             <artifactId>undertow-servlet</artifactId>
             <version>1.1.0.Final</version>
         </dependency>
+
+        <dependency>
+<groupId>com.mysql</groupId>
+<artifactId>management</artifactId>
+            <version>5-0-2-beta</version>
+        </dependency>
+
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-undertow</artifactId>
